# magic-light

./: Cargo.toml
src/: led.rs  led_strip.rs  main.rs
